--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -11,14 +11,17 @@
     <application
             android:allowBackup="false"
             android:supportsRtl="true"
+            android:icon="@drawable/icon"
             android:theme="@style/AppTheme">
 
         <activity android:name=".QuizResultActivity"
+                  android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         <activity
                 android:name=".QuizQuestionsActivity"
+                android:screenOrientation="portrait"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <!--
